fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,10 @@
   padding: 0;
 }
 
-html {
+html,
+body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* Navbar */
